--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     
     <android.support.v7.widget.CardView
@@ -15,35 +16,41 @@
         app:cardCornerRadius="4dp"
         android:elevation="3dp">
 
-        <FrameLayout
+        <LinearLayout
             android:layout_gravity="center"
-            android:layout_width="200dp"
-            android:layout_height="200dp">
+            android:layout_width="350dp"
+            android:layout_height="400dp"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/ivUserImage"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="300dp"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/userimage"
+                />
 
             <TextView
-            android:id="@+id/tvname"
-            android:textSize="20sp"
-            android:textColor="@android:color/black"
-            android:gravity="center"
-            tools:text="@string/hello"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+                android:id="@+id/tvname"
+                android:textSize="20sp"
+                android:textColor="@android:color/black"
+                android:gravity="center|left"
+                android:paddingLeft="15sp"
+                tools:text="name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/tvage"
                 android:textSize="20sp"
                 android:textColor="@android:color/black"
-                android:gravity="center"
+                android:gravity="center|left"
+                android:paddingLeft="15sp"
                 tools:text="@string/age"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content" />
 
-        </FrameLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
